# bash_optparse

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure  configure.ac  py-compile
completion/: Makefile.am  Makefile.in  README  bash_optparse_completion
doc/: Makefile.am  Makefile.in  README  example_functions  example_script  example_script_simple
src/: .gitignore  Makefile.am  Makefile.in  bash_optparse.in  bash_optparse.py  bop_argument.py  bop_checks.py  bop_common.py  bop_errors.py  bop_instantiated_values.py.in  bop_option.py  bop_parser.py  bop_preparser.py  bop_settings.py
tests/: bop_syntax.vim  bop_use_local  inspect_generated_script
utils/: Makefile.am  Makefile.in  bash_optparse_generate_script  bash_optparse_template
